--- a/nonogram/pubspec.yaml
+++ b/nonogram/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   nonogram_dart: ^2.1.3
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
