--- a/nonogram/pubspec.yaml
+++ b/nonogram/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
   flutter_rating_bar: ^4.0.1
+  flutter_material_color_picker: ^1.2.0
+  flutter_toggle_tab: ^1.4.1
 
 dev_dependencies:
   flutter_test:
